hphp/test/zend/good/zend-traits/language014.php.exp
HipHop Fatal error: method 'hello' declared in multiple traits in hphp/test/zend/good/zend-traits/language014.php on line 17
